# bacic_django

./: .dockerignore  .gitignore  .manage.py.swp  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  tes.rest
app/: models.py  serializers.py  urls.py  views.py
app/management/commands/: checkdb.py  createuser.py
app/migrations/: 0001_initial.py
core/: asgi.py  exception.py  urls.py  wsgi.py
kubernetes/: configmap.yaml  db_deployment.yaml  django.yaml  pg_storage.yaml  secret  secret.yaml
logger/: log.py  logging.py
scripting/: calling.sh
settings/: authentication.py  base.py  bool_check.py  development.py
settings/permissions/: __init__.py
